--- a/index.html
+++ b/index.html
@@ -21,3 +21,12 @@
             </nav>
         </div>
     </header>
+
+<!-- ภาพรวมจังหวัด -->
+ <section class="overview">
+    <div class="container">
+        <h2>ภาพรวมจังหวัด</h2>
+        <p>จังหวัดฉะเชิงเทรา หรือแปดริ้ว เป็นจังหวัดใกล้กรุงเทพฯ เด่นเรื่องวัดหลวงพ่อโสธร วิถีชีวิตเรียบง่าย และตลาดเก่าแก่ริมแม่น้ำบางปะกง</p>
+        <img src="images/chachoengsao.jpg" alt="ภาพไฮไลท์ของจังหวัด" class="highlight-image">
+    </div>
+</section>
