--- a/index.html
+++ b/index.html
@@ -30,3 +30,14 @@
         <img src="images/chachoengsao.jpg" alt="ภาพไฮไลท์ของจังหวัด" class="highlight-image">
     </div>
 </section>
+<!-- สถานที่น่าสนใจ -->
+<section class="attractions">
+    <div class="container">
+        <h2>สถานที่น่าสนใจ</h2>
+        <div class="card-container">
+    <!-- การ์ด 1 -->
+    <div class="card" onclick="openModal('วัดโสธรวรารามวรวิหาร', 'หรือวัดหลวงพ่อโสธร เป็นวัดสำคัญที่ประดิษฐานหลวงพ่อโสธร พระพุทธรูปศักดิ์สิทธิ์คู่บ้านคู่เมืองของชาวแปดริ้ว ที่ผู้คนเดินทางมาสักการะเพื่อความเป็นสิริมงคล', 'images/watsothon.jpg')">
+        <img src="images/watsothon.jpg" alt="วัดโสธรวรารามวรวิหาร">
+        <div class="card-content">
+            <h3>วัดโสธรวรารามวรวิหาร</h3>
+        </div>
