--- a/index.html
+++ b/index.html
@@ -41,3 +41,10 @@
         <div class="card-content">
             <h3>วัดโสธรวรารามวรวิหาร</h3>
         </div>
+    </div>
+    <div class="card" onclick="openModal('ตลาดบ้านใหม่ร้อยปี เมืองแปดริ้ว', 'เป็นแหล่งท่องเที่ยวเชิงวัฒนธรรมริมแม่น้ำบางปะกง โดดเด่นด้วยบรรยากาศย้อนยุค ร้านค้าโบราณ และอาหารพื้นบ้านที่หาทานยาก', 'images/market100year.jpg')">
+        <img src="images/market100year.jpg" alt="ตลาดบ้านใหม่ร้อยปี เมืองแปดริ้ว">
+        <div class="card-content">
+            <h3>ตลาดบ้านใหม่ร้อยปี เมืองแปดริ้ว</h3>
+        </div>
+    </div>    
