--- a/index.html
+++ b/index.html
@@ -48,3 +48,9 @@
             <h3>ตลาดบ้านใหม่ร้อยปี เมืองแปดริ้ว</h3>
         </div>
     </div>    
+    <div class="card" onclick="openModal('สวนปาล์มฟาร์มนก', 'แหล่งเรียนรู้ ท่องเที่ยวเกี่ยวกับนกแก้วสวยงาม ที่ใหญ่อันดับต้นๆ ของโลก มีนกแก้วมากกว่า 2,000 ตัวและมากกว่า 80 สายพันธุ์ที่หาดู ได้ยาก ', 'images/farmnok.jpg')">
+        <img src="images/farmnok.jpg" alt="สวนปาล์มฟาร์มนก">
+        <div class="card-content">
+            <h3>สวนปาล์มฟาร์มนก</h3>
+        </div>
+    </div>
