--- a/index.html
+++ b/index.html
@@ -54,3 +54,9 @@
             <h3>สวนปาล์มฟาร์มนก</h3>
         </div>
     </div>
+    <div class="card" onclick="openModal('วัดสมานรัตนาราม', 'เป็นที่ตั้งของพระพิฆเนศปางนอนเสวยสุของค์ใหญ่ที่สุดในไทย และยังเป็นสถานที่ศักดิ์สิทธิ์ที่ดึงดูดผู้คนให้มาสักการะเพื่อขอพรและความเป็นสิริมงคล', 'images/watsaman.png')">
+        <img src="images/watsaman.png" alt="วัดสมานรัตนาราม">
+        <div class="card-content">
+            <h3>วัดสมานรัตนาราม</h3>
+        </div>
+    </div>
