--- a/index.html
+++ b/index.html
@@ -37,26 +37,34 @@
         <div class="card-container">
     <!-- การ์ด 1 -->
     <div class="card" onclick="openModal('วัดโสธรวรารามวรวิหาร', 'หรือวัดหลวงพ่อโสธร เป็นวัดสำคัญที่ประดิษฐานหลวงพ่อโสธร พระพุทธรูปศักดิ์สิทธิ์คู่บ้านคู่เมืองของชาวแปดริ้ว ที่ผู้คนเดินทางมาสักการะเพื่อความเป็นสิริมงคล', 'images/watsothon.jpg')">
-        <img src="images/watsothon.jpg" alt="วัดโสธรวรารามวรวิหาร">
-        <div class="card-content">
-            <h3>วัดโสธรวรารามวรวิหาร</h3>
+            <img src="images/watsothon.jpg" alt="วัดโสธรวรารามวรวิหาร">
+            <div class="card-content">
+                <h3>วัดโสธรวรารามวรวิหาร</h3>
+            </div>
         </div>
-    </div>
     <div class="card" onclick="openModal('ตลาดบ้านใหม่ร้อยปี เมืองแปดริ้ว', 'เป็นแหล่งท่องเที่ยวเชิงวัฒนธรรมริมแม่น้ำบางปะกง โดดเด่นด้วยบรรยากาศย้อนยุค ร้านค้าโบราณ และอาหารพื้นบ้านที่หาทานยาก', 'images/market100year.jpg')">
-        <img src="images/market100year.jpg" alt="ตลาดบ้านใหม่ร้อยปี เมืองแปดริ้ว">
-        <div class="card-content">
-            <h3>ตลาดบ้านใหม่ร้อยปี เมืองแปดริ้ว</h3>
-        </div>
-    </div>    
+            <img src="images/market100year.jpg" alt="ตลาดบ้านใหม่ร้อยปี เมืองแปดริ้ว">
+            <div class="card-content">
+                <h3>ตลาดบ้านใหม่ร้อยปี เมืองแปดริ้ว</h3>
+            </div>
+        </div>    
     <div class="card" onclick="openModal('สวนปาล์มฟาร์มนก', 'แหล่งเรียนรู้ ท่องเที่ยวเกี่ยวกับนกแก้วสวยงาม ที่ใหญ่อันดับต้นๆ ของโลก มีนกแก้วมากกว่า 2,000 ตัวและมากกว่า 80 สายพันธุ์ที่หาดู ได้ยาก ', 'images/farmnok.jpg')">
-        <img src="images/farmnok.jpg" alt="สวนปาล์มฟาร์มนก">
-        <div class="card-content">
-            <h3>สวนปาล์มฟาร์มนก</h3>
+            <img src="images/farmnok.jpg" alt="สวนปาล์มฟาร์มนก">
+            <div class="card-content">
+                <h3>สวนปาล์มฟาร์มนก</h3>
+            </div>
         </div>
-    </div>
     <div class="card" onclick="openModal('วัดสมานรัตนาราม', 'เป็นที่ตั้งของพระพิฆเนศปางนอนเสวยสุของค์ใหญ่ที่สุดในไทย และยังเป็นสถานที่ศักดิ์สิทธิ์ที่ดึงดูดผู้คนให้มาสักการะเพื่อขอพรและความเป็นสิริมงคล', 'images/watsaman.png')">
-        <img src="images/watsaman.png" alt="วัดสมานรัตนาราม">
+            <img src="images/watsaman.png" alt="วัดสมานรัตนาราม">
+            <div class="card-content">
+                <h3>วัดสมานรัตนาราม</h3>
+            </div>
+        </div>
+<div class="card" onclick="openModal('ท่าน้ำคาเฟ่', 'คาเฟ่น่ารักๆ สุดชิลล์ที่ตั้งอยู่ริมแม่น้ำบางปะกง ความโดดเด่นของคาเฟ่แห่งนี้คือแต่เดิมทีเป็นบ้านเก่าแก่อายุมากกว่า 50 ปี ที่ถูกดัดแปลงให้มาเป็นคาเฟ่น่ารักๆ ไปนั่งจิบกาแฟ ชมวิวแม่น้ำบางปะกงชิลล์ๆ', 'images/cafe.jpg')">
+        <img src="images/cafe.jpg" alt="ท่าน้ำคาเฟ่">
         <div class="card-content">
-            <h3>วัดสมานรัตนาราม</h3>
+            <h3>ท่าน้ำคาเฟ่</h3>
         </div>
     </div>
+    </div>
+</div>
