--- a/index.html
+++ b/index.html
@@ -68,3 +68,12 @@
     </div>
     </div>
 </div>
+</section>
+<div id="modal" class="modal">
+    <div class="modal-content">
+        <span class="close" onclick="closeModal()">&times;</span>
+        <img id="modal-image" src="" alt="สถานที่">
+        <h3 id="modal-title"></h3>
+        <p id="modal-description"></p>
+    </div>
+</div>
