--- a/contact.html
+++ b/contact.html
@@ -5,3 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ฟอร์มติดต่อเรา</title>
     <style>
+    /* การรีเซ็ต CSS เบื้องต้น */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+
+        body {
+            background-color: #f9f9f9;
+            color: #333;
+            line-height: 1.6;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            min-height: 100vh;
+        }
