--- a/contact.html
+++ b/contact.html
@@ -23,3 +23,20 @@
             flex-direction: column;
             min-height: 100vh;
         }
+
+        /* Container หลัก */
+        .form-container {
+            background-color: #fff;
+            padding: 20px 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            max-width: 500px;
+            margin-bottom: 20px;
+        }
+
+        .form-container h2 {
+            text-align: center;
+            margin-bottom: 20px;
+            color: #0078D7;
+        }
