--- a/contact.html
+++ b/contact.html
@@ -40,3 +40,34 @@
             margin-bottom: 20px;
             color: #0078D7;
         }
+ /* ฟอร์มแถว */
+        .form-group {
+            margin-bottom: 15px;
+        }
+
+        label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+
+        input, textarea {
+            width: 100%;
+            padding: 10px;
+            margin-top: 5px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            font-size: 1rem;
+            transition: border-color 0.3s ease-in-out;
+        }
+
+        input:focus, textarea:focus {
+            outline: none;
+            border-color: #0078D7;
+            box-shadow: 0 0 5px rgba(0, 120, 215, 0.2);
+        }
+
+        textarea {
+            resize: vertical;
+            min-height: 100px;
+        }
