ลิงก์ กลับไปยังหน้า index

--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
             resize: vertical;
             min-height: 100px;
         }
-        
+
     /* ปุ่มส่งข้อมูล */
         button {
             width: 100%;
@@ -89,3 +89,22 @@
         button:hover {
             background-color: #005bb5;
         }
+
+    /* ลิงก์ กลับไปยังหน้า index */
+        .back-link {
+            text-align: center;
+            margin-top: 10px;
+        }
+
+        .back-link a {
+            text-decoration: none;
+            color: #0078D7;
+            font-weight: bold;
+            transition: color 0.3s ease-in-out;
+        }
+
+        .back-link a:hover {
+            color: #005bb5;
+            text-decoration: underline;
+        }
+    </style>
