--- a/contact.html
+++ b/contact.html
@@ -113,8 +113,14 @@
     <div class="form-container">
         <h2>ฟอร์มติดต่อเรา</h2>
         <form>
-            <!-- ชื่อ-นามสกุล -->
+    <!-- ชื่อ-นามสกุล -->
             <div class="form-group">
                 <label for="name">ชื่อ-นามสกุล:</label>
                 <input type="text" id="name" name="name" placeholder="กรุณากรอกชื่อ-นามสกุล" required>
             </div>
+    <!-- อีเมล -->
+            <div class="form-group">
+                <label for="email">อีเมล:</label>
+                <input type="email" id="email" name="email" placeholder="example@domain.com" required>
+            </div>
+        
