--- a/contact.html
+++ b/contact.html
@@ -123,4 +123,9 @@
                 <label for="email">อีเมล:</label>
                 <input type="email" id="email" name="email" placeholder="example@domain.com" required>
             </div>
+    <!-- เบอร์โทรศัพท์ -->
+            <div class="form-group">
+                <label for="phone">เบอร์โทรศัพท์:</label>
+                <input type="tel" id="phone" name="phone" placeholder="08X-XXX-XXXX">
+            </div>
         
