ป้อนส่ง ลิงก์กลับ

--- a/contact.html
+++ b/contact.html
@@ -133,4 +133,16 @@
                 <label for="message">ข้อความ:</label>
                 <textarea id="message" name="message" placeholder="กรุณากรอกข้อความที่ต้องการติดต่อ" required></textarea>
             </div>
+
+    <!-- ปุ่มส่งข้อมูล -->
+            <button type="submit">ส่งข้อมูล</button>
+        </form>
+    </div>
+
+    <!-- ลิงก์กลับไปยังหน้า index -->
+        <div class="back-link">
+            <p><a href="index.html">กลับไปยังหน้าแรก</a></p>
+        </div>
+</body>
+</html>
         
