--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <!-- ส่วนหัวของเว็บไซต์ -->
     <header class="main-header">
         <div class="container">
-            <h1>WELCOME</h1>
+            <h1>ยินดีต้อนรับ</h1>
             <nav>
                 <ul class="nav-list">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="index.html">หน้าแรก</a></li>
+                    <li><a href="contact.html">ติดต่อ</a></li>
                 </ul>
             </nav>
         </div>
@@ -42,7 +42,7 @@
                 <h3>วัดโสธรวรารามวรวิหาร</h3>
             </div>
         </div>
-        
+
     <div class="card" onclick="openModal('ตลาดบ้านใหม่ร้อยปี เมืองแปดริ้ว', 'เป็นแหล่งท่องเที่ยวเชิงวัฒนธรรมริมแม่น้ำบางปะกง โดดเด่นด้วยบรรยากาศย้อนยุค ร้านค้าโบราณ และอาหารพื้นบ้านที่หาทานยาก', 'images/market100year.jpg')">
             <img src="images/market100year.jpg" alt="ตลาดบ้านใหม่ร้อยปี เมืองแปดริ้ว">
             <div class="card-content">
