--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>แนะนำจังหวัดฉะเชิงเทรา</title>
     <!-- ลิงก์ไปยังไฟล์ CSS -->
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- ส่วนหัวของเว็บไซต์ -->
