แก้ไขรายละเอียด

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                     <h3>สวนปาล์มฟาร์มนก</h3>
                 </div>
             </div>
-            <div class="card" onclick="openModal('วัดสมานรัตนาราม', 'เป็นที่ตั้งของพระพิฆเนศปางนอนเสวยสุของค์ใหญ่ที่สุดในไทย และยังเป็นสถานที่ศักดิ์สิทธิ์ที่ดึงดูดผู้คนให้มาสักการะเพื่อขอพรและความเป็นสิริมงคล', 'images/watsaman.png')">
-                <img src="images/watsaman.png" alt="วัดสมานรัตนาราม">
+            <div class="card" onclick="openModal('วัดสมานรัตนาราม', 'เป็นที่ตั้งของพระพิฆเนศปางนอนเสวยสุของค์ใหญ่ที่สุดในไทย และยังเป็นสถานที่ศักดิ์สิทธิ์ที่ดึงดูดผู้คนให้มาสักการะเพื่อขอพรและความเป็นสิริมงคล', 'images/watsaman.jpg')">
+                <img src="images/watsaman.jpg" alt="วัดสมานรัตนาราม">
                 <div class="card-content">
                     <h3>วัดสมานรัตนาราม</h3>
                 </div>
