--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
         .form-container h2 {
             text-align: center;
             margin-bottom: 20px;
-            color: #0078D7;
+            color: #b76aca;
         }
 
         /* ฟอร์มแถว */
@@ -64,7 +64,7 @@
 
         input:focus, textarea:focus {
             outline: none;
-            border-color: #0078D7;
+            border-color: #b76aca;
             box-shadow: 0 0 5px rgba(0, 120, 215, 0.2);
         }
 
@@ -77,7 +77,7 @@
         button {
             width: 100%;
             padding: 10px;
-            background-color: #0078D7;
+            background-color: #b76aca;
             border: none;
             color: white;
             font-size: 1rem;
@@ -88,7 +88,7 @@
         }
 
         button:hover {
-            background-color: #005bb5;
+            background-color: #b76aca;
         }
 
         /* ลิงก์ กลับไปยังหน้า index */
@@ -99,13 +99,13 @@
 
         .back-link a {
             text-decoration: none;
-            color: #0078D7;
+            color: #b76aca;
             font-weight: bold;
             transition: color 0.3s ease-in-out;
         }
 
         .back-link a:hover {
-            color: #005bb5;
+            color: #b76aca;
             text-decoration: underline;
         }
     </style>
