--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <!-- ส่วนหัวของเว็บไซต์ -->
     <header class="main-header">
         <div class="container">
-            <h1>WELCOME</h1>
+            <h1>ยินดีต้อนรับ</h1>
             <nav>
                 <ul class="nav-list">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="index.html">หน้าแรก</a></li>
+                    <li><a href="contact.html">ติดต่อเรา</a></li>
                 </ul>
             </nav>
         </div>
